<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bc_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <TextView
        android:id="@+id/textViewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/taskView"
        app:layout_constraintEnd_toStartOf="@+id/guideline_left"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_extralight"
        android:hint="@string/taskEdit"
        app:layout_constraintEnd_toStartOf="@+id/guideline_left"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/textViewTask"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_extralight"

        android:text="@string/dateView"
        app:layout_constraintEnd_toStartOf="@+id/guideline_left"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/buttonDate" />

    <Button
        android:id="@+id/buttonDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bc_btn_appbar"
        android:fontFamily="@font/oxygen_bold"
        android:text="@string/dateButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline_left"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/textViewTerm" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/timeView"
        app:layout_constraintEnd_toStartOf="@+id/guideline_left"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/buttonTime" />

    <Button
        android:id="@+id/buttonTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bc_btn_appbar"
        android:fontFamily="@font/oxygen_bold"
        android:text="@string/timeButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline_left"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    <TextView
        android:id="@+id/textViewTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/termView"
        app:layout_constraintEnd_toStartOf="@+id/guideline_left"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/editTextTask" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="Kategoria"
        app:layout_constraintEnd_toStartOf="@+id/guideline_left"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/textViewTime" />


    <EditText
        android:id="@+id/editTextCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_extralight"
        android:hint="@string/editTextCategory"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_left"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/textViewCategory" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bc_btn_add"
        android:fontFamily="@font/oxygen_bold"
        android:text="+"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_left" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bc_spinner"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/guideline_left"
        app:layout_constraintStart_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/editTextCategory" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>